5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4380/executions/1793_1620.log
== TEST (2019-05-30 18:32:07) 
-- CODE:
from numpy import *
t=array(eval(input("tempo do banho: ")))
perc=array(eval(input("porcentagem de abertura: ")))
p=0
agua=0
while (p<size(t)):
	agua=0.05*perc[p]*t[p]
p=p+1
print(round(sum(agua),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:33:13) 
-- CODE:
from numpy import *
t=array(eval(input("tempo do banho: ")))
perc=array(eval(input("porcentagem de abertura: ")))
p=0
agua=0
while (p<size(t)):
	agua=0.05*perc[p]*t[p]
p=p+1
print(float(round(sum(agua),2)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:34:51) 
-- CODE:
from numpy import *
t=array(eval(input("tempo do banho: ")))
perc=array(eval(input("porcentagem de abertura: ")))
p=0
agua=zero(p,dtypefloat)
while (p<size(t)):
	agua=0.05*perc[p]*t[p]
p=p+1
print(float(round(sum(agua),2)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:35:27) 
-- CODE:
from numpy import *
t=array(eval(input("tempo do banho: ")))
perc=array(eval(input("porcentagem de abertura: ")))
p=0
agua=zeros(p,dtypefloat)
while (p<size(t)):
	agua=0.05*perc[p]*t[p]
p=p+1
print(float(round(sum(agua),2)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:36:11) 
-- CODE:
from numpy import *
t=array(eval(input("tempo do banho: ")))
perc=array(eval(input("porcentagem de abertura: ")))
p=0
agua=zeros(p,dtype float)
while (p<size(t)):
	agua=0.05*perc[p]*t[p]
p=p+1
print(float(round(sum(agua),2)))
-- ERROR:
File "XXXX", line 5
    agua=zeros(p,dtype float)
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:36:27) 
-- CODE:
from numpy import *
t=array(eval(input("tempo do banho: ")))
perc=array(eval(input("porcentagem de abertura: ")))
p=0
agua=zeros(p,dtypeint)
while (p<size(t)):
	agua=0.05*perc[p]*t[p]
p=p+1
print(float(round(sum(agua),2)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:37:03) 
-- CODE:
from numpy import *
t=array(eval(input("tempo do banho: ")))
perc=array(eval(input("porcentagem de abertura: ")))
p=0
agua=zeros(p)
while (p<size(t)):
	agua=0.05*perc[p]*t[p]
p=p+1
print(float(round(sum(agua),2)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:38:11) 
-- CODE:
from numpy import *
t=array(eval(input("tempo do banho: ")))
perc=array(eval(input("porcentagem de abertura: ")))
p=0
agua=zeros(p,dtype=float)
while (p<size(t)):
	agua=0.05*perc[p]*t[p]
p=p+1
print(float(round(sum(agua),2)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:38:45) 
-- CODE:
from numpy import *
t=array(eval(input("tempo do banho: ")))
perc=array(eval(input("porcentagem de abertura: ")))
p=0
agua=zeros(p,dtype=float)
while (p<size(t)):
	agua=0.05*perc[p]*t[p]
	p=p+1
print(float(round(sum(agua),2)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:39:18) 
-- CODE:
from numpy import *
t=array(eval(input("tempo do banho: ")))
perc=array(eval(input("porcentagem de abertura: ")))
p=0
agua=zeros(p,dtype=float)
while (p<size(t)):
	agua=0.05*perc[p]*t[p]
	p=p+1
print(float(round(sum(agua),2)))
-- EXECUTION TIME:
0.422177
-- TEST CASE 1:
---- input:
[5,30,5,10]
[20,35,15,20]
---- correct output:
71.25
---- user output:
10.0
-- TEST CASE 2:
---- input:
[5,30,5,7,52]
[20,35,15,10,60]
---- correct output:
220.75
---- user output:
156.0
-- TEST CASE 3:
---- input:
[2,60,10,30,20,10]
[10,70,20,35,21,10]
---- correct output:
299.5
---- user output:
5.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:58:44) 
-- CODE:
from numpy import *
t=array(eval(input("tempo do banho: ")))
perc=array(eval(input("porcentagem de abertura: ")))
p=0
agua=zeros(p,dtype=float)
while (p<size(t)):
	if()
	agua=(0.05)*perc[p]*t[p]
	p=p+1
print(float(round(sum(agua),2)))
-- ERROR:
File "XXXX", line 7
    if()
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:59:04) 
-- CODE:
from numpy import *
t=array(eval(input("tempo do banho: ")))
perc=array(eval(input("porcentagem de abertura: ")))
p=0
agua=zeros(p,dtype=float)
while (p<size(t)):
	agua=(0.05)*perc[p]*t[p]
	p=p+1
print(float(round(sum(agua),2)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:01:34) 
-- CODE:
from numpy import *
t=array(eval(input("tempo do banho: ")))
perc=array(eval(input("porcentagem de abertura: ")))
p=0
agua=zeros(p,dtype=float)
while (p<size(t)):
	agua=(0.05)*perc[p]*t[p]
	p=p+1
print(float(round(sum(agua),2)))
-- EXECUTION TIME:
0.36227
-- TEST CASE 1:
---- input:
[5,30,5,10]
[20,35,15,20]
---- correct output:
71.25
---- user output:
10.0
-- TEST CASE 2:
---- input:
[5,30,5,7,52]
[20,35,15,10,60]
---- correct output:
220.75
---- user output:
156.0
-- TEST CASE 3:
---- input:
[2,60,10,30,20,10]
[10,70,20,35,21,10]
---- correct output:
299.5
---- user output:
5.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:05:17) 
-- CODE:
from numpy import *
t=array(eval(input("tempo do banho: ")))
perc=array(eval(input("porcentagem de abertura: ")))
p=0
agua=0
while (p<size(t)):
	agua=agua+(0.05)*perc[p]*t[p]
	p=p+1
print(float(round(sum(agua),2)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:05:42) 
-- CODE:
from numpy import *
t=array(eval(input("tempo do banho: ")))
perc=array(eval(input("porcentagem de abertura: ")))
p=0
agua=0
while (p<size(t)):
	agua=agua+(0.05)*perc[p]*t[p]
	p=p+1
print(float(round(sum(agua),2)))
-- EXECUTION TIME:
0.343045
-- TEST CASE 1:
---- input:
[5,30,5,10]
[20,35,15,20]
---- correct output:
71.25
---- user output:
71.25
-- TEST CASE 2:
---- input:
[5,30,5,7,52]
[20,35,15,10,60]
---- correct output:
220.75
---- user output:
220.75
-- TEST CASE 3:
---- input:
[2,60,10,30,20,10]
[10,70,20,35,21,10]
---- correct output:
299.5
---- user output:
299.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
